# OpenSteamTool

./: README.md  README_ES.md  README_ZH.md  build.bat  opensteamtool.example.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  game_compatibility.yml
.github/workflows/: ci.yml
skills/opensteamtool/: SKILL.md
skills/opensteamtool/references/: architecture.md  development.md  lua_api.md
src/: CMakeLists.txt  dllmain.h
src/Hook/: Hooks_CallBack.cpp  Hooks_CallBack.h  Hooks_Package.cpp  Hooks_Package.h  Patterns.h
src/Utils/Config/: Config.cpp  Config.h  LuaConfig.cpp  LuaFileWatcher.h
src/Utils/Logging/: Log.h
src/Utils/SteamMetadata/: StatsClient.cpp  StatsClient.h
src/dwmapi/: dwmapi.cpp
src/xinput1_4/: xinput1_4.def
